  used as a hash reference if the passed body is empty.

* Pass the locale name instead of the locale settings in 
  Vend::Config::parse_locales() to POSIX::setlocale. 
  This bug was discovered due to a buffer overflow in the FreeBSD C
  library. Thanks to Joachim Leidinger for reporting and pursuing
  this problem and Alexander Leidinger for debugging.

Usertags
--------

* Fixed a bug in profile handling of table-editor tag that kept '$' in
  profiles from working right ($Values->{whatever} etc.). Also tolerate
  profiles that don't end with a newline (e.g. when quoted with |...|).

* [fedex-query] -- Updated FedEx URL, reported by Rick Boykin
  <rick@epitomedesign.com>

* Allow bounce targets (Window-Target: header).

* Fixed missing labels for checkbox and radio types 
  and added display type to formel tag.

Admin UI
--------

* Added capability to page editor to cope with any ITL page instead of only
  the ones derived from the foundation demo.

* Owner field in the permission editor didn't propagate to the database.

* Fixed a bug in the permission check in the order resp. traffic
  statistics pages.

* Avoid spurious image on login page which appeared under certain
  conditions if the session has been expired.

* Import page has a new option to replace existing items seamlessly
  by the imported set.

* Fix spurious "backup" error message in page_edit caused by search without
  backup database.

* Added mv_session_id to the forms in the layout page.

* Modifying Promotions using the Page Editor now references the correct
  Promotions list (from "Merchandising" or "Item Editor" meta data) instead
  of a static list specified in each component.  It is now possible to add a 
  promotion without having to modify component source code.

Payment
-------

* Fixed bug where decimal pricing would not be forced, causing failure for
  round amounts with some gateways.

* Add penny_pricing option for those gateways which might not accept
  decimals.

Foundation